--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@ exclude:
 # Jekyll SEO Tag (Optional)
 # =========================
 twitter:
-  username: ngzhio
+  username: yoinffa
   card: summary
 logo: logo.png
 social:
-  name: Shangzhi Huang
+  name: yoinffa Dave
   links:
     - https://twitter.com/ngzhio
     - https://www.facebook.com/ngzhio
