--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Hamilton
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
+author: Daiyongfa
 avatar: /logo.png
-email: ngzhio@gmail.com
+email: yoinffa@gmail.com
 
 plugins:
   - jekyll-seo-tag
